homeserver/mosquitto/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  namespace: mosquitto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
        - name: mosquitto
          image: eclipse-mosquitto:latest
          ports:
            - containerPort: 1883
            - containerPort: 9001
          volumeMounts:
            - name: mosquitto-config
              mountPath: /mosquitto/config
            - name: mosquitto-data
              mountPath: /mosquitto/data
            - name: mosquitto-log
              mountPath: /mosquitto/log
      volumes:
        - name: mosquitto-config
          persistentVolumeClaim:
            claimName: mosquitto-config-pvc
        - name: mosquitto-data
          persistentVolumeClaim:
            claimName: mosquitto-data-pvc
        - name: mosquitto-log
          persistentVolumeClaim:
            claimName: mosquitto-log-pvc
